--- a/grandPy/static/css/style.css
+++ b/grandPy/static/css/style.css
@@ -116,6 +116,7 @@ header
 	/*flexbox parameter*/
 	display: flex;
 	flex-direction: column;
+	
 	align-items: center;
 
 	margin: auto;
@@ -151,6 +152,7 @@ header
     opacity: 0.8;
 
     text-shadow: 4px 4px 4px black;
+    text-align: center;
 
     /*border*/
 	border-top-right-radius: 15px;
@@ -232,6 +234,7 @@ header
 	overflow: auto;
 
 	border: 1px inset red;
+
 }
 
 input
