add post method from client to server

--- a/grandPy/templates/index.html
+++ b/grandPy/templates/index.html
@@ -34,7 +34,7 @@
 
 					</ul>
 
-					<form onsubmit="collect_message(); return false;">
+					<form id="userInput" method="post" onsubmit="collect_message(); return false;">
 						<input type="text" name="userText" id="userText"
 							placeholder="Taper votre demande et appuyez sur entrer"
 							size=70% maxlength="100" />
