--- a/grandPy/static/css/style.css
+++ b/grandPy/static/css/style.css
@@ -216,8 +216,10 @@ header
 .bubble_text
 {
 
-	width: 55%;
-	min-height: 5%;
+	width: auto;
+	min-width: 15%;
+
+	height:  auto;
 
 	background: blue; 
 	color: black;
@@ -231,10 +233,38 @@ header
 
 	opacity: 0.9;
 
-	overflow: auto;
-
 	border: 1px inset red;
 
+}
+
+.messageHeader
+{
+	margin-top: 0.5%;
+	margin-bottom: 1%;
+}
+
+.message
+{
+	margin-top: 0.5%;
+	text-indent: 5%;
+}
+
+.map 
+{
+	height: 400px;
+	width: 100%;
+
+	background: black;
+
+	border: 3px inset blue;
+	border-radius:10px;
+}
+
+
+form
+{
+	width: 72%;
+	margin-bottom: 2.5%; 
 }
 
 input
@@ -243,6 +273,8 @@ input
 	border-radius:10px;
 
 	margin-bottom: 3%;
+
+	width: 100%;
 }
 
 .end_allign
