--- a/grandPy/static/css/style.css
+++ b/grandPy/static/css/style.css
@@ -185,7 +185,7 @@ header
 	flex-direction: column;
 
 	margin: auto;
-	margin-bottom: 4em;
+	margin-bottom: 4%;
 
 	padding-right: 6px;
 	padding-left: 6px;
@@ -215,7 +215,6 @@ header
 
 .bubble_text
 {
-
 	width: auto;
 	min-width: 15%;
 
@@ -249,14 +248,15 @@ header
 	text-indent: 5%;
 }
 
-.map 
+#map 
 {
-	height: 400px;
-	width: 100%;
+	height: 0;
+	width: 0;
+
+	margin: center;
 
 	background: black;
 
-	border: 3px inset blue;
 	border-radius:10px;
 }
 
@@ -300,6 +300,16 @@ footer
 
 	font-size: 2em;
     font-weight: bold;
+}
+
+li
+{
+	margin-bottom: 20px;
+}
+
+ul ul
+{
+	margin-bottom: 5px;
 }
 
 .network_picture
