--- a/grandPy/templates/index.html
+++ b/grandPy/templates/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html>
 	<head>
 		<meta charset="utf-8" />
@@ -9,8 +10,7 @@
 	</head>
 
 	<body>
-
-		<script src="https://maps.google.com/maps/api/js?key=AIzaSyD3UanyjV5IphscC92cuW9Kx9R-FzVMyco" type="text/javascript"></script>
+		<script type="text/javascript" src="//maps.googleapis.com/maps/api/js?key=AIzaSyD3UanyjV5IphscC92cuW9Kx9R-FzVMyco"></script>
 
 		<div id='block_page'>
 			
@@ -36,6 +36,8 @@
 
 					</ul>
 
+					<div id="map"></div>
+
 					<form id="userInput" method="post" onsubmit="collect_message(); return false;">
 						<input type="text" name="userText" id="userText"
 							placeholder="Taper votre demande et appuyez sur entrer" />
@@ -55,9 +57,9 @@
 
 		<script src="{{ url_for('static', filename='js/place.js') }}"></script>
 
-		<script src="{{ url_for('static', filename='js/grandPy.js') }}"></script>
-
 		<script src="{{ url_for('static', filename='js/message.js') }}"></script>
+
+		<script src="{{ url_for('static', filename='js/grandPy.js') }}"></script>
 
 		<script src="{{ url_for('static', filename='js/index.js') }}"></script>
 
