--- a/grandPy/templates/index.html
+++ b/grandPy/templates/index.html
@@ -40,7 +40,7 @@
 
 					<form id="userInput" method="post" onsubmit="collect_message(); return false;">
 						<input type="text" name="userText" id="userText"
-							placeholder="Taper votre demande et appuyez sur entrer" />
+							placeholder="taper votre demande (ex: hey GrandPy connais tu l'adresse de ...)" />
 					</form>
 
 				</div>
