--- a/grandPy/templates/index.html
+++ b/grandPy/templates/index.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 
 		<link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet"/>
 
@@ -15,7 +16,7 @@
 		<div id='block_page'>
 			
 			<header>
-				<img src="{{ url_for('static', filename='images/logo2.jpeg') }}" alt="logo">
+				<img id='logo' src="{{ url_for('static', filename='images/logo.jpeg') }}" alt="logo">
 				<h1>GrandPy Bot</h1>
 				<p id='citation'>
 					Raconte nous une histoire...
@@ -28,7 +29,7 @@
 
 					<div id=chat_banniere>
 						<img id='chat_picture' 
-							src="{{ url_for('static', filename='images/logo2.jpeg') }}" alt="logo">
+							src="{{ url_for('static', filename='images/logo.jpeg') }}" alt="logo">
 						<p class="center">GrandPy Bot</p>
 					</div>
 
